UserMealsUtil refactoring
- added createMealWithExcess();
- cycles for(a:A){} was changed to .forEach()